--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -4,6 +4,7 @@
     android:layout_height="330dp">
     <ImageView
         android:id="@+id/image_thumb"
+        android:contentDescription="extra"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
