--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -25,6 +25,7 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
+                    android:contentDescription="extra"
                     android:layout_height="match_parent"
                     android:id="@+id/detail_poster"/>
                 <LinearLayout
@@ -49,7 +50,7 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Mark as Favorite"
+                        android:text="@string/mark_label"
                         />
                 </LinearLayout>
             </LinearLayout>
@@ -63,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="30sp"
                     android:textColor="#333"
-                    android:text="Overview: "/>
+                    android:text="@string/overview_label"/>
 
                 <TextView
                     android:layout_width="match_parent"
