--- a/app/src/main/res/layout/movie_reviews_item.xml
+++ b/app/src/main/res/layout/movie_reviews_item.xml
@@ -10,25 +10,23 @@
         android:layout_width="match_parent"
         android:padding="5dp"
         android:layout_height="wrap_content">
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/reviewer_name"
-            android:textColor="#777"
-            android:textSize="22sp"
             android:text="@string/reviewer_placeholder"
             android:layout_width="match_parent"
+            android:textAppearance="?attr/textAppearanceCaption"
             android:padding="0dp"
             android:layout_margin="0dp"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/review"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="0dp"
             android:layout_margin="0dp"
             android:layout_marginLeft="5dp"
-            android:text="@string/review_placeholder"
-            android:textColor="#000"
-            android:textSize="15sp" />
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:text="@string/review_placeholder" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
