--- a/app/src/main/res/layout/movie_trailer_item.xml
+++ b/app/src/main/res/layout/movie_trailer_item.xml
@@ -13,25 +13,24 @@
     <FrameLayout
         android:layout_width="200dp"
         android:layout_height="100dp">
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/trailer_poster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center" />
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:src="@android:drawable/ic_media_play" />
     </FrameLayout>
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/trailer_title"
-        android:textColor="#000"
-        android:textSize="22sp"
+        android:textAppearance="?attr/textAppearanceBody1"
         android:layout_marginLeft="10dp"
         android:text="@string/trailer_title_placeholder" />
 </LinearLayout>
